<resources>
    <string name="app_name">P04-RevisionNotes</string>
    <string name="revision_note">Revision Note</string>
    <string name="stars">Stars</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="show_list">Show List</string>
    <string name="insert">Insert</string>
    <string name="title_activity_main">MainActivity - Insert</string>
    <string name="title_activity_second">SecondActivity - Select</string>
    <string-array name="Spinner_items">
        <item>1984</item>
        <item>1986</item>
        <item>1987</item>
        <item>1990</item>
        <item>1991</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>

    </string-array>
</resources>
